syntax = "proto3";
package cheqdid.cheqdnode.resource.v1;

import "cheqd/resource/v1/resource.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cheqd/cheqd-node/x/resource/types/v1";

// Query defines the gRPC querier service.
service Query {
  rpc Resource(QueryGetResourceRequest) returns (QueryResourceResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/{id}";
  }
  rpc CollectionResources(QueryGetCollectionResourcesRequest) returns (QueryCollectionResourcesResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/all";
  }
  rpc AllResourceVersions(QueryGetAllResourceVersionsRequest) returns (QueryGetAllResourceVersionsResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/versions/{name}";
  }
}

message QueryGetResourceRequest {
  string collection_id = 1;
  string id = 2;
}

message QueryResourceResponse {
  Resource resource = 1;
}

message QueryGetCollectionResourcesRequest {
  string collection_id = 1;
}

message QueryCollectionResourcesResponse {
  repeated ResourceHeader resources = 1;
}

message QueryGetAllResourceVersionsRequest {
  string collection_id = 1;
  string name = 2;
  string resourceType = 3;
}

message QueryGetAllResourceVersionsResponse {
  repeated ResourceHeader resources = 1;
}
